[gd_scene load_steps=3 format=3 uid="uid://dtam1yaruxmqc"]

[ext_resource type="Script" path="res://Prog122c.gd" id="1_pl2yc"]

[sub_resource type="Theme" id="Theme_ea75r"]
default_font_size = 30

[node name="Prog122c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl2yc")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 473.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 503.0
offset_right = 239.0
offset_bottom = 625.0
theme = SubResource("Theme_ea75r")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 496.0
offset_right = 663.0
offset_bottom = 618.0
theme = SubResource("Theme_ea75r")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 833.0
offset_top = 496.0
offset_right = 1036.0
offset_bottom = 618.0
theme = SubResource("Theme_ea75r")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
